kube-manifests/kubernetes_in_action/ingresses/ns-and-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
